--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookPriveAccount.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookPriveAccount.cshtml
@@ -1,5 +1,20 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
+﻿<div class="col-lg-1">
+
+</div>
+<div class="col-lg-10">
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li><a href="~/Handleiding/FacebookZakelijkAccount">Facebook zakelijk account aanmaken</a></li>
+        <li class="active">Facebook privé account aanmaken</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/FacebookZakelijkAccount">&larr; Facebook zakelijk account aanmaken</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+
         <h2>Facebook privé account aanmaken</h2>
 
         <h3>Privéregistratie</h3>
@@ -55,5 +70,13 @@
         <p>
             <img class="thumbnail" src="~/Content/Images/bevestig_prive.png" alt="">
         </p>
+
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/FacebookZakelijkAccount">&larr; Facebook zakelijk account aanmaken</a></li>
+    </ul>
+</div>
+<div class="col-lg-1">
+
 </div>
