--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookZakelijkAccount.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookZakelijkAccount.cshtml
@@ -1,5 +1,18 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
+﻿<div class="col-lg-1">
+
+</div>
+<div class="col-lg-10">
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Facebook zakelijk account aanmaken</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding">&larr; Handleiding Index</a></li>
+        <li class="next"><a href="~/Handleiding/TwitterZakelijkAccount">Twitter zakelijk account aanmaken &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
         <h2>Facebook zakelijk account aanmaken</h2>
 
         <p>
@@ -114,4 +127,12 @@
             <img class="thumbnail" src="~/Content/Images/voltooien_bedrijf.png" alt="">
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding">&larr; Handleiding Index</a></li>
+        <li class="next"><a href="~/Handleiding/TwitterZakelijkAccount">Twitter zakelijk account aanmaken &rarr;</a></li>
+    </ul>
+</div>
+<div class="col-lg-1">
+
 </div>
