--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktFacebook.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktFacebook.cshtml
@@ -1,21 +1,186 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
+
+<div class="col-lg-10">
+
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Hoe werkt Facebook?</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/InfoSocialMedia">&larr; Kort maar krachtig: wat kan je met Social Media?</a></li>
+        <li class="next"><a href="~/Handleiding/HoeWerktTwitter">Hoe werkt Twitter? &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+
+        <h2>Hoe werkt Facebook?</h2>
+
+        <h3>De zakelijke pagina</h3>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
+            Jouw pagina ziet eruit als onderstaande afbeelding, maar dan met de door jou ingevulde informatie.
         </p>
 
         <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
+            <img class="thumbnail" src="~/Content/Images/pagina_zakelijk.png" alt="">
         </p>
 
-        <h4>kopjeje</h4>
+        <h4>Omslagfoto</h4>
 
         <p>
-            tekst
+            De omslagfoto geeft de eerste indruk van jouw pagina. Denk bijvoorbeeld aan een foto van een product of dienst. Houdt wel rekening met de voorwaarden van Facebook aan deze omslagfoto’s. De omslag mag bijvoorbeeld geen contactgegevens, call-to-actions als ‘Like ons’ of ‘Deel’ en prijs- of aankoopinformatie bevatten.
+        </p>
+
+        <p>
+            De omslagfoto is toe te voegen door te klikken op de knop ‘ Een omslag toevoegen’.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/omslag_toevoegen.png" alt="">
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/voorbeeld_omslag.png" alt="">
+        </p>
+
+        <h4>Statusupdate</h4>
+
+        <p>
+            Al die berichtjes die je voorbij ziet komen op Facebook? Dat is een statusupdate. De manier op Facebook om informatie te delen in de vorm van tekst, foto’s, video’s en website linkjes. Een statusupdate kan vanaf de pagina van het ‘nieuwsoverzicht’ of vanaf jouw zakelijke pagina worden geplaatst. Jouw berichten, statusupdates, verschijnen op jouw zakelijke pagina en in het nieuwsoverzicht van jouw pagina en die van jouw volgers.
+        </p>
+
+        <p>
+            Om een bericht te plaatsen ga je naar jouw zakelijke pagina. Als je daar nog niet bent; ga naar jouw zakelijke pagina door op jouw profielfoto of paginanaam te klikken. Op jouw zakelijke pagina, onder de profielfoto ziet u onderstaand vak. Klik op het tekstveld met de tekst ‘Wat heb je gedaan?’.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_vak.png" alt="">
+        </p>
+
+        <h5>
+            Status
+        </h5>
+
+        <p>
+            Hier kan je kiezen om een bericht te plaatsen in de vorm van tekst en/of een website link. Simpelweg het bericht hier te typen of een gekopieerde tekst of link te plakken. Als de tekst naar wens is, dan klik je op de knop ‘Plaatsen’.
+        </p>
+
+        <p>
+            Met de drie knoppen onder het tekstveld kan je een datum, locatie of snel een foto aan het bericht toevoegen.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_vak_actief.png" alt="">
+        </p>
+
+        <h5>
+            Foto/Video
+        </h5>
+
+        <p>
+            Hier kan je ervoor kiezen om een bericht op basis van een foto of video toe te voegen. Volg hiervoor de instructies op het scherm.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_fotovideo.png" alt="">
+        </p>
+
+        <p>
+            Zodra de foto is toegevoegd kan je naar wens nog een tekstueel bericht aan de foto toevoegen.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_vak_fototoevoegen.png" alt="">
+        </p>
+
+        <h5>
+            Evenement of mijlpaal
+        </h5>
+
+        <p>
+            Bij ‘Evenement kan je jouw volgers uitnodigen voor een evenement, denk aan de opening van jouw winkel of misschien het 5-jarig jubileum van jouw bedrijf.
+        </p>
+
+        <p>
+            Bij ‘Mijlpaal’ kan je een gebeurtenis toevoegen, denk bijvoorbeeld aan de opening van jouw winkel of het moment dat je officieel bij de KVK ingeschreven stond of misschien wel de dag van jouw 100ste klant. Deze update wordt ook zichtbaar op het nieuwsoverzicht van jouw volgers.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_evenementmijlpaal.png" alt="">
+        </p>
+
+        <h4>
+            Wat kan je met een bericht?
+        </h4>
+
+        <p>
+            Of nog belangrijker... Wat kunnen volgers met jouw bericht? Liken, reageren en delen. Als volgers dit doen, dan verschijnt jouw bericht weer in het nieuwsoverzicht van hun vrienden. Zo verspreiden jouw berichten naar een steeds grotere groep mensen.
+        </p>
+
+        <h5>
+            Liken
+        </h5>
+
+        <p>
+            Oftewel ‘Vind ik leuk’ geeft aan dat iemand jouw bericht leuk vindt.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_liken.png" alt="">
+        </p>
+
+        <p>
+            Als dit gebeurt, dan krijg jij hier een notificatie van.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_notificatie.png" alt="">
+        </p>
+
+        <h5>
+            Reageren
+        </h5>
+
+        <p>
+            Naast liken kan iemand ook reageren op een bericht. Het laten zien op nieuwsoverzichten van vrienden en de notificatie van een reactie werkt hetzelfde als bij een ‘like’. Het verschil is wel dat een reactie ook weer reactie of een like kan krijgen, een like kan dat niet.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/status_reageren.png" alt="">
+        </p>
+
+        <h5>
+            Delen
+        </h5>
+
+        <p>
+            Dan is er nog de mogelijkheid voor volgers om het bericht te delen. Wederom krijgen vrienden van volgers in hun nieuwsoverzicht te zien dat hun vriend jouw bericht deelt. Maar deze functie doet nog iets anders, het bericht wordt aan hun eigen profielpagina toegevoegd en blijft daar definitief staan, tenzij het bericht verwijderd wordt.
+        </p>
+
+        <h4>
+            Interactieve infographic
+        </h4>
+
+        <p>
+            Simply Business heeft een handige interactieve infographic gemaakt voor MKB’ers die Facebook willen inzetten. Het is in het Engels, maar zeker de moeite waard om eens doorheen te klikken!
+        </p>
+
+        <p>
+            <a href="http://www.simplybusiness.co.uk/microsites/facebook-for-small-businesses/ ">http://www.simplybusiness.co.uk/microsites/facebook-for-small-businesses/ </a>
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/InfoSocialMedia">&larr; Kort maar krachtig: wat kan je met Social Media?</a></li>
+        <li class="next"><a href="~/Handleiding/HoeWerktTwitter">Hoe werkt Twitter? &rarr;</a></li>
+    </ul>
+
+</div>
+
+<div class="col-lg-1">
+
 </div>
