--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktTwitter.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktTwitter.cshtml
@@ -1,21 +1,111 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
+
+<div class="col-lg-10">
+
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Hoe werkt Twitter?</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/HoeWerktFacebook">&larr; Hoe werkt Facebook?</a></li>
+        <li class="next"><a href="~/Handleiding/HulpMetSchrijven">Help! Ik ben niet zo goed in schrijven &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+
+
+        <h2>Hoe werkt Twitter?</h2>
+
+        <h3>Allereerst vier woorden die de basis vormen van Twitter</h3>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
+            Tweeten is het plaatsen van een bericht.
         </p>
 
         <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
+            Retweeten (RT) is het delen van een tweet met jouw volgers. Als er nog ruimte is binnen de 144 karakters, dan kan je nog iets aan de retweet toevoegen.
         </p>
 
-        <h4>kopjeje</h4>
+        <p>
+            Direct message (DM), daarmee kan je op Twitter andere mensen een privébericht sturen.
+        </p>
 
         <p>
-            tekst
+            Hashtag oftewel #, hiermee kan je berichten een bepaald label meegeven. Als mensen op die hashtag zoeken, dan kunnen alle tweets vinden die daarover gaan.
+        </p>
+
+        <p>
+            De @@ voor je eigen naam is het belangrijkst. Bij @@jouwnaam zie je alle berichten waarin jij genoemd wordt. Die kunnen aan jouw bedrijf gericht zijn, over jouw bedrijf gaan of een RT van een bericht van jouw bedrijf zijn. Het is handig om regelmatig te kijken wat aan of over jouw bedrijf getwitterd wordt.
+        </p>
+
+        <h3>
+            Een tweet plaatsen
+        </h3>
+
+        <p>
+            Op Twitter kan je een tweet (bericht) plaatsen door op het blauwe vierkantje met het schrijfveertje te klikken.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/tweet_plaatsen_knop.png" alt="">
+        </p>
+
+        <p>
+            Vervolgens krijg je onderstaande pop-up in beeld waarin je de tweet kan opstellen. Hier kan je een bericht van maximaal 140 karakters schrijven, een foto en eventueel een locatie aan het bericht toevoegen.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/tweet_veld.png" alt="">
+        </p>
+
+        <p>
+            Als het bericht naar wens is, klik je op de knop ‘Tweeten’ en jouw tweet wordt gepubliceerd.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/tweet_voorbeeld.png" alt="">
+        </p>
+
+        <p>
+            Vervolgens kunnen andere mensen op Twitter op jouw tweet reageren, hem favoriet maken of retweeten.
+        </p>
+
+        <h3>
+            Trends
+        </h3>
+
+        <p>
+            Volgens Twitter zijn trend een unieke manier om dichterbij te komen bij onderwerpen die voor jou interessant zijn. Is er bijvoorbeeld een hashtag trending topic die jij kan gebruiken voor een tweet? Doe dat dan vooral! Er zullen veel mensen zijn die op die hashtag zoeken, als de hashtag ook in jouw tweet staat dan komt jouw tweet bij die zoekresultaten te staan.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/twitter_trends.png" alt="">
+        </p>
+
+        <h3>
+            Interactieve infographic
+        </h3>
+
+        <p>
+            Simply Business heeft een handige interactieve infographic gemaakt voor MKB’ers die Twitter willen inzetten. Het is in het Engels, maar zeker de moeite waard om eens doorheen te klikken!
+        </p>
+
+        <p>
+            <a href="http://www.simplybusiness.co.uk/microsites/twitter-for-small-businesses/">http://www.simplybusiness.co.uk/microsites/twitter-for-small-businesses/</a>
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/HoeWerktFacebook">&larr; Hoe werkt Facebook?</a></li>
+        <li class="next"><a href="~/Handleiding/HulpMetSchrijven">Help! Ik ben niet zo goed in schrijven &rarr;</a></li>
+    </ul>
+
+</div>
+
+<div class="col-lg-1">
+
 </div>
