--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HulpMetSchrijven.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HulpMetSchrijven.cshtml
@@ -1,21 +1,112 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
 
-        <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
-        </p>
+<div class="col-lg-10">
 
-        <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
-        </p>
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Help! Ik ben niet zo goed in schrijven</li>
+    </ol>
 
-        <h4>kopjeje</h4>
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/HoeWerktTwitter">&larr; Hoe werkt Twitter?</a></li>
+        <li class="next"><a href="~/Handleiding/TipsEnTricks">Posts, tweets… Tips & Tricks! &rarr;</a></li>
+    </ul>
 
-        <p>
-            tekst
-        </p>
-    </div>
+    <div class="tekst-groot">
+
+            <h2>Help! Ik ben niet zo goed in schrijven</h2>
+
+            <p>
+                Wat ook een belangrijk is op Social Media: schrijven. Want een Social/content plan kan nog zo geweldig zijn, maar als je op Social Media iets wil bereiken, dan moet je ook goede teksten schrijven. Hiervoor ga ik het basisbegrip in communicatie van Ellis Buis aan je meegeven: het ZBMO-model.
+            </p>
+
+            <p>
+                <img class="thumbnail" src="~/Content/Images/zbmo_model.png" alt="">
+            </p>
+
+            <p>
+                Het ZBMO-model laat zien wat ontvanger gericht schrijven betekent. Namelijk: dat Z zich richt op de interesses en behoeften van O, hierop zijn B afstemt en zijn keuze voor een M bepaalt. Alleen dan bereikt Z zijn doel en is er sprake van effectief commercieel schrijven.
+            </p>
+
+            <p>
+                Verder behandelt Ellis Buis de volgende punten.
+            </p>
+
+            <h3>Ruis</h3>
+
+            <p>
+                - Ruis op je boodschap: als je niet weet wat je boodschap precies is, of je bent daar vaag over, wat verwacht je dan van de ontvanger?<br />
+                - Ruis bij zender en ontvanger: je spreekt letterlijk en figuurlijk de taal van je doelgroep niet, of de ontvanger kan de boodschap niet begrijpen.
+            </p>
+
+            <p>
+                Ruis kan voorkomen worden door de interesses en de behoeften van O goed in de gaten te houden.
+            </p>
+
+            <h3>
+                Tekstdoel
+            </h3>
+
+            <p>
+                Je vraagt je af wat je met je tekst wil bereiken, zoals:
+            </p>
+
+            <p>
+                - Mensen informeren over een nieuw product, een nieuwe dienst of organisatie.<br />
+                - Mensen aanzetten tot het kopen/afnemen van een product/dienst.<br />
+                - Achtergrondinformatie geven over een product, dienst of project.
+            </p>
+
+            <h3>
+                Illustraties
+            </h3>
+
+            <p>
+                Zijn er afbeeldingen waar je mee kunt of moet werken? Hoeveel? Wat voor soort afbeeldingen zijn het: foto’s, tekeningen, grafieken, etc.? Op Social Media werken afbeeldingen erg goed, een post met afbeelding oogt een stuk aantrekkelijker dan enkel een stukje tekst.
+            </p>
+
+            <h3>
+                Schaven en omgooien
+            </h3>
+
+            <p>
+                Misschien zijn er een paar posts waar je nog niet tevreden over bent. Dwing jezelf wel om alleen te veranderen wat nodig is. Maak zinnen af die nog niet volledig waren, kap lange zinnen in stukjes, voeg signaalwoorden toe, vervang een zin door een andere en laat het er dan bij. Weet je niet zeker of het wel goed is? Vraag mensen uit je omgeving voor feedback. Let wel, je vraagt om feedback. Dus neem niet kritiekloos alles over wat die ander zegt.
+            </p>
+
+            <h3>
+                Unique selling points (USP’s) en benefits
+            </h3>
+
+            <p>
+                Benefits zijn voor de ontvanger vaak belangrijker dan USP’s. Dat komt doordat benefits direct de voordelen benoemen en USP’s vooral vertellen hoe goed het product of de dienst is.
+            </p>
+
+            <p>
+                Bij verkoop is een stelregel dat mensen geen producten kopen, maar dat kopen waarvan ze denken dat het product hun oplevert. Een klant koopt dus geen dvd-speler, maar kijkplezier of status. Het kunnen benoemen en bedenken van benefits is een van de belangrijkste technieken om een tekst wervend te maken.
+            </p>
+
+            <h3>
+                Schrijfadviezen
+            </h3>
+
+            <p>
+                - Schrijf kort en bondig <br />
+                - Gebruik signaalwoorden<br />
+                - Gebruik de actieve vorm, niet de passieve vorm<br />
+                - Vermijd naamwoordstijl<br />
+                - Gebruik alleen jargon als de doelgroep ermee vertrouwd is
+            </p>
+        </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/HoeWerktTwitter">&larr; Hoe werkt Twitter?</a></li>
+        <li class="next"><a href="~/Handleiding/TipsEnTricks">Posts, tweets… Tips & Tricks! &rarr;</a></li>
+    </ul>
+
+</div>
+
+<div class="col-lg-1">
+
 </div>
