--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
@@ -1,26 +1,38 @@
-﻿<h2>Handleiding</h2>
+﻿<h2>Handleiding Index</h2>
 
 <p>
-    blaaa
+    Op deze pagina vind je een inhoudsopgave met alle pagina's van de handleiding. 
 </p>
 
-<ul class="list-unstyled">
-    <li>
-        <h4>@Html.ActionLink("Facebook zakelijk account aanmaken", "FacebookZakelijkAccount", "Handleiding")</h4>
-        <ul>
-            <li><h5>@Html.ActionLink("Facebook priveaccount aanmaken", "FacebookPriveAccount", "Handleiding")</h5></li>
-        </ul>
-    </li>
-    <li><h4>@Html.ActionLink("TwitterZakelijkAccount", "TwitterZakelijkAccount", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("InfoSocialMedia", "InfoSocialMedia", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("HoeWerktFacebook", "HoeWerktFacebook", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("HoeWerktTwitter", "HoeWerktTwitter", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("HulpMetSchrijven", "HulpMetSchrijven", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("TipsEnTricks", "TipsEnTricks", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("PostenOpFacebook", "PostenOpFacebook", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("TweetenOpTwitter", "TweetenOpTwitter", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("SocialContentStrategie", "SocialContentStrategie", "Handleiding")</h4></li>
-    
-</ul>
+<p>
+    <ul class="list-unstyled">
+        <li>
+            <h4>@Html.ActionLink("Facebook zakelijk account aanmaken", "FacebookZakelijkAccount", "Handleiding")</h4>
+            <ul>
+                <li><h5>@Html.ActionLink("Facebook privé account aanmaken", "FacebookPriveAccount", "Handleiding")</h5></li>
+            </ul>
+        </li>
+        <li><h4>@Html.ActionLink("Twitter zakelijk account aanmaken", "TwitterZakelijkAccount", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Kort maar krachtig: wat kan je met Social Media?", "InfoSocialMedia", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Hoe werkt Facebook?", "HoeWerktFacebook", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Hoe werkt Twitter?", "HoeWerktTwitter", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Help! Ik ben niet zo goed in schrijven", "HulpMetSchrijven", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Posts, tweets… Tips & Tricks!", "TipsEnTricks", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Posten op Facebook", "PostenOpFacebook", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Tweeten op Twitter", "TweetenOpTwitter", "Handleiding")</h4></li>
+        <li><h4>@Html.ActionLink("Social contentstrategie", "SocialContentStrategie", "Handleiding")</h4></li>
+
+    </ul>
+</p>
+
+<p>
+    <a href="#">
+        <img class="thumbnail" src="~/Content/Images/pdf.png" alt="">
+    </a>
+</p>
+<p>
+    De complete handleiding als pdf downloaden.
+</p>
+
 
 
