--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/InfoSocialMedia.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/InfoSocialMedia.cshtml
@@ -1,21 +1,91 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
+
+<div class="col-lg-10">
+
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Kort maar krachtig: wat kan je met Social Media?</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/TwitterZakelijkAccount">&larr; Twitter zakelijk account aanmaken</a></li>
+        <li class="next"><a href="~/Handleiding/HoeWerktFacebook">Hoe werkt Facebook? &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+
+
+        <h2>Kort maar krachtig: wat kan je met Social Media?</h2>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
+            Volgens Jeroen Bertrams kan je aan de hand van zijn 7-stappen model, op een verstandige wijze actief worden op Social Media.
         </p>
 
         <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
+            <img class="thumbnail" src="~/Content/Images/zevenstappenmodel.png" alt="">
         </p>
 
-        <h4>kopjeje</h4>
+        <h3>Luisteren</h3>
 
         <p>
-            tekst
+            Voordat bedrijven aan Social Media beginnen, moet er volgens Jeroen eerst worden geluisterd. Waarover praat de doelgroep? Waar maakt ze zich zorgen over? Waar houdt ze zich dagelijks mee bezig? Van welke sites deelt ze content? Welk nieuws houdt de doelgroep bezig? Over welke producten en diensten communiceren ze? En door wie laten ze zich op Social Media, maar ook daarbuiten, beïnvloeden en inspireren?
+        </p>
+
+        <p>
+            Het doel is om de digitale sociale wereld van de doelgroep te leren kennen. Waar zit de doelgroep? Waarover praat de doelgroep? Op welke wijze praat de doelgroep? Deze informatie is noodzakelijk om op een goede wijze met hen in contact te komen. En om proposities op hun gedrag en wensen af te stemmen.
+        </p>
+
+        <h3>Communiceren</h3>
+
+        <p>
+            Op Social Media hebben bedrijven de unieke kans om in contact te komen met de doelgroep. Het gaat om veel meer dan advertenties en het aanmaken van een fanpage. Het doel is om waardevolle interactie tot stand te brengen die vooral door de (potentiële) klant wordt gewaardeerd en niet als indringend wordt ervaren.
+        </p>
+
+        <p>
+            Het belang van webcare neemt ook steeds meer toe. Social Media wordt steeds meer gebruikt door consumenten om vragen te stellen of klachten te delen. Een snelle en goede afwikkeling draagt bij aan hogere klanttevredenheid.
+        </p>
+
+        <h3>Publiceren</h3>
+
+        <p>
+            Een van de belangrijkste kenmerken van Social Media is dat we steeds makkelijker content kunnen produceren en deze content razendsnel kunnen verspreiden. Door te publiceren op Social Media kunnen bedrijven hun kennis, producten en diensten etaleren. Waar vroeger publicaties van bedrijven niet verder kwamen dan een onopvallend plekje op de eigen homepage, is het nu mogelijk om via het sociale web veel meer mensen te bereiken en te betrekken.
+        </p>
+
+        <h3>Marketing</h3>
+
+        <p>
+            De groei van Social Media heeft grote invloed op de wijze waarop online marketing plaatsvindt. Op Social Media gelden andere regels dan op het ‘normale’ internet. Gebruikers van Social Media geven snel hun mening. Een campagne met een boodschap die niet aanslaat of op verkeerde wijze wordt gebracht, kan daardoor meer kwaad doen dan goed. Desondanks zijn prachtige campagnes mogelijk.
+        </p>
+
+        <h3>Verkopen</h3>
+
+        <p>
+            Social commerce wordt wel één van de belangrijkste ontwikkelingen op Social Media genoemd. Apps helpen consumenten bij het vinden van nieuwe producten op basis van hun profiel op netwerken. En na een aankoop kunnen consumenten hun aanwinst direct delen met hun vrienden op Social Media.
+        </p>
+
+        <h3>Optimaliseren en integreren</h3>
+
+        <p>
+            Bij het woord optimaliseren wordt vooral gedacht aan het optimaliseren van een website voor zoekmachines. Dat is van groot belang, maar door de opkomst van Social Media is het optimaliseren van een website voor Social Media tegenwoordig net zo belangrijk. Daarbij gaat het niet alleen om het deelbaar maken van zoveel mogelijk content op de eigen website, maar ook om het integreren van Social Media op de eigen site, zoals het direct via Facebook kunnen reageren.
+        </p>
+
+        <h3>Meten</h3>
+
+        <p>
+            Meten is van groot belang. Wat leveren de activiteiten van Social Media op? Welke KPI’s14 dienen te worden gehanteerd? Hoe kunnen we meten? Dit kan alleen als vooraf kwalitatieve en kwantitatieve doelen worden geformuleerd die ook daadwerkelijk bijgehouden kunnen worden.
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/TwitterZakelijkAccount">&larr; Twitter zakelijk account aanmaken</a></li>
+        <li class="next"><a href="~/Handleiding/HoeWerktFacebook">Hoe werkt Facebook? &rarr;</a></li>
+    </ul>
+
+</div>
+
+<div class="col-lg-1">
+
 </div>
