--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/PostenOpFacebook.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/PostenOpFacebook.cshtml
@@ -1,21 +1,132 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
+
+<div class="col-lg-10">
+
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Posten op Facebook</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/TipsEnTricks">&larr; Posts, tweets… Tips & Tricks!</a></li>
+        <li class="next"><a href="~/Handleiding/TweetenOpTwitter">Tweeten op Twitter &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+
+        <h2>Posten op Facebook</h2>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
+            Er zijn via Google duizenden artikels te vinden die je meer kunnen vertellen over zakelijk posten op Facebook. Hier heb ik er eentje van uitgekozen om jou te helpen bij het beginnen met posten. Er zijn vier soorten posts die je vaak voorbij ziet komen op Facebook die effectief zijn. De vier G’s van Erik Weijers en Ienke de Vrieze, hier vertellen zij meer over in hun artikel ‘Breng je fans in beweging: 3 soorten Facebook-content die likes opleveren,’. Drie ja, want de vierde krijg je er Gratis bij.
+        </p>
+
+        <h3>De vier G's</h3>
+
+        <h4>Iets Grappigs</h4>
+
+        <p>
+            “Mensen hebben de onbedwingbare behoefte om een lach te delen. Bij grappige berichten moet je natuurlijk niet denken aan het genre Belgenmoppen. Denk eerder aan rake, grappige observaties, satirische cartoons of gefotoshopte plaatjes.”
+        </p>
+
+        <h5>MKB voorbeeld:</h5>
+
+        <p>
+            Mwah Tekstuele Verwenners, de naam zegt het al: zij verwennen mensen met tekstuele hoogstandjes. In de vorm van kaarten, stikkers, t-shirts en nog veel meer. Ook leuk: een selectie van de beste tekstverwenners worden zelfs gebundeld in de vorm van een boek.
         </p>
 
         <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
+            En waar zij goed in zijn hebben zij op een slimme (en makkelijke) manier vertaald naar Facebook (pagina likes: 11785). Elke dag een nieuwe tekst, in dezelfde stijl als hun producten. Maar waar het vooral interessant wordt is dat zij het op Social Media combineren met grappige actuele inhakers, zoals te zien in onderstaande afbeelding.
         </p>
 
-        <h4>kopjeje</h4>
+        <p>
+            <img class="thumbnail" src="~/Content/Images/mwah_facebook.png" alt="">
+        </p>
+
+        <h4>Iets Groots</h4>
 
         <p>
-            tekst
+            “Alles wat het gevoel ‘wow, moet je dat zien!’ oproept. Dit kan letterlijk iets groots zijn. Heb je als energiebedrijf een enorm windmolenpark in bedrijf genomen? Die spectaculaire foto’s doen het vast goed.”
+        </p>
+
+        <h5>MKB voorbeeld:</h5>
+
+        <p>
+            Toevallig is het onderstaande voorbeeld van een winkel in mijn straat, de Museumwinkel. Op het moment dat jouw content onder andere bestaat uit een zelf opgezette Europese Oehoe, dan kan je wel spreken van de wow-factor. Ik besloot om even bij ze langs te lopen om te vragen wat hun ervaring is met Social Media.
+        </p>
+
+        <p>
+            Eigenaar Erwin van Zoelen: “In 2011 zijn wij begonnen met Facebook voor de winkel en dat was nog lastiger dan we hadden gedacht. Maar langzaamaan groeide ons aantal volgers (inmiddels 1713, waar wij best trots op zijn). Wij merken dat vooral posts met bijzondere dieren goed aanslaan op onze pagina en dat deze vooral likes opleveren. Wat ons weer meer naamsbekendheid bezorgd en wij hebben gemerkt dat die naamsbekendheid weer zorgt voor meer bezoekers van de winkel. Leuk is dat volgers van Facebook vanuit het hele land, en zelfs van buiten Nederland, bij onze winkel langskomen als ze in de buurt zijn.”
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/museumwinkel_facebook.png" alt="">
+        </p>
+
+        <h4>Iets met de Groep</h4>
+
+        <p>
+            “Mensen willen deel uitmaken van iets, meewerken aan iets. Geef ze die kans: “make a baby with your followers”. Stel een vraag, leg een keuze voor, laat iets raden, laat hen een onderschrift verzinnen bij een foto.”
+        </p>
+
+        <h5>MKB voorbeeld:</h5>
+
+        <p>
+            Deze content soort wordt (nog) niet veel toegepast door MKB op Social Media. Ja, zo nu en dan kom je een stelling of vraag tegen. Maar niet veel. Je ziet veel vaker dat ondernemers een foto van een product plaatsen en zelf hun mening geven. Zoals te zien in onderstaande afbeelding van By LJ (pagina likes: 450), kan dat hetzelfde werken als het vragen om een mening.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/bylj_facebook.png" alt="">
+        </p>
+
+        <p>
+            Een voorbeeld van hoe je op Facebook een vraag kan combineren met een foto van een product, zie je in het voorbeeld van Donsje Amsterdam (pagina likes: 599).
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/donsje_facebook.png" alt="">
+        </p>
+
+        <h4>Iets Gratis</h4>
+
+        <p>
+            “Bovenstaande 3 G’s prikkelen sterke emoties. Eén emotie hebben we buiten beschouwing gelaten: hebzucht. Als je iets weggeeft of iets verloot, dan ben je plots het populairste jongetje van de klas. De vraag is natuurlijk hoe tijdelijk deze populariteit is. Veel bedrijven geven klanten de kans iets te winnen in ruil voor een like voor hun bedrijfspagina. Dit is een transactie die uiteraard wat minder verheffend is dan bovenstaande drie emoties. Maar zeker een factor om rekening mee te houden.”
+        </p>
+
+        <h5>MKB voorbeeld:</h5>
+
+        <p>
+            Jorg’s Houten Meubelen, een meubelzaak uit Naarden, is hiervan een extreem voorbeeld. Eigenlijk zijn zij helemaal niet zo briljant op het gebied van Social Media. Een regelmatige spelfout, plaatjes met design dat er niet altijd even gelikt uitziet, posts zijn veel te lang en ze verspillen geen tijd aan excuses bij negatieve posts van ontevreden klanten.
+        </p>
+
+        <p>
+            En toch hebben zij 182.644 likes op hun Facebook pagina en posts met 8.582 likes, 1.622 reacties en 14.083 shares. Hoe? Zij zijn heel erg goed in het toepassen van de vierde G: het weggeven van gratis producten. En als er iets te winnen valt, dan hebben veel mensen daar wel een like en/of share voor over.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/jorg_facebook.png" alt="">
+        </p>
+
+        <h3>Infographic Facebook post</h3>
+
+        <p>
+            Hieronder staat een infographic van Mycleveragency die specifieke tips geeft over de opbouw van een Facebook post.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/infographic_facebook.png" alt="">
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/TipsEnTricks">&larr; Posts, tweets… Tips & Tricks!</a></li>
+        <li class="next"><a href="~/Handleiding/TweetenOpTwitter">Tweeten op Twitter &rarr;</a></li>
+    </ul>
+
+</div>
+
+<div class="col-lg-1">
+
 </div>
