--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/SocialContentStrategie.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/SocialContentStrategie.cshtml
@@ -1,21 +1,206 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
+
+<div class="col-lg-10">
+
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Social contentstrategie</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/TweetenOpTwitter">&larr; Tweeten op Twitter</a></li>
+        <li class="next"><a href="~/SocialPlan/Create"><span class="glyphicon glyphicon-plus"></span> Socialplan maken!</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+
+        <h2>Social contentstrategie</h2>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
+            De laatste stap naar het maken van een eigen contentstrategie is weten wat het inhoud. Op de proppen komen met een goede strategie kan een grote uitdaging zijn, maar het loont als eenmaal begrijp hoe het werkt.
         </p>
 
         <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
+            Een Social Media contentstrategie. Hoe eenvoudig het ook lijkt te zijn, dwing
+
+            jezelf om deze op te stellen. Veel ondernemers starten heel enthousiast met
+
+            Social Media en na enkele weken hebben zij het idee dat het niet werkt. Dit komt
+
+            omdat er geen plan is, er mist structuur en het verhaal dat je wil vertellen. Als
+
+            dit voor jou niet eens duidelijk is, hoe kan een potentiële volger dan weten of het
+
+            wel de moeite waard is om jou te gaan volgen?
         </p>
 
-        <h4>kopjeje</h4>
+        <p>
+            Hieronder volgen de onderdelen van de contentstrategie die je zelf bij Mijn Social
+
+            Plan kan opstellen.
+        </p>
+
+        <h3>Doelstelling</h3>
 
         <p>
-            tekst
+            De doelstelling beschrijft wat een bedrijf wil bereiken. Bezoek, merkbekendheid,
+
+            feedback? Dit heeft namelijk invloed op de onderwerpen, de planning en de vorm
+
+            van content.
+        </p>
+
+        <h3>Welke hashtags/communities leven er ‘nu’ omheen</h3>
+
+        <p>
+            Het is belangrijk om te weten wat zich afspeelt om jouw bedrijf heen. Wat doen
+
+            concurrenten? Welke hashtags gebruiken zij, waar spelen zij op in en welke
+
+            pagina’s zijn populair? Op Twitter is het bijvoorbeeld erg belangrijk welke
+
+            hashtags je in het bericht gebruikt om een bepaalde doelgroep te bereiken. Een
+
+            bruidsmodewinkel zou bijvoorbeeld moeten kijken of de #trouwen actief wordt
+
+            gevolgd. Is dit het geval? Dan is het verstandig om deze zelf ook gaan gebruiken
+
+            in Tweets.
+        </p>
+
+        <h3>Targets</h3>
+
+        <p>
+            Wat zijn de tussendoelen? Denk aan het behalen van 100 likes in vier weken.
+
+            Door deze targets te stellen, kan je meten of de huidige strategie effectief is.
+        </p>
+
+        <h4>Kritische succesfactoren. Kansen en gevaren.</h4>
+
+        <p>
+            Een kritische succesfactor bepaald het lot van bijvoorbeeld een actie. Stel je
+
+            vraagt volgers om foto’s in te zenden met de belofte dat deze in het ‘happy
+
+            customer’ album worden gepubliceerd. De leukste vijf winnen iets. Maar
+
+            vervolgens stuurt niemand een foto in. Zonder die foto’s, geen winnaar = geen
+
+            succes.
+        </p>
+
+        <p>
+            Kansen omschrijven wat jouw volgers met de pagina kunnen bereiken.
+
+            Bijvoorbeeld: Een kans is dat wij een plek bieden waar vrouwen graag hun
+
+            mening delen over trouwjurken.
+        </p>
+
+        <p>
+            Gevaren omschrijven wat de kansen in de weg kunnen zitten. Bijvoorbeeld: een
+
+            gevaar is dat vrouwen niet willen dat bepaalde vrienden op Social Media weten
+
+            wat hun mening is over een bepaald item.
+        </p>
+
+        <h3>Tone of voice</h3>
+
+        <p>
+            De tone of voice is de vorm waarin je de lezer aanspreekt. Het gaat hier vooral
+
+            om een woordkeus, zinsopbouw en aanspreekvorm die aansluit op de doelgroep.
+        </p>
+
+        <h3>Propositie</h3>
+
+        <p>
+            Hier zeg je kort wat jij de volgers van jouw pagina biedt. Bijvoorbeeld: Mis geen
+
+            enkele actie van Bruidsmode op http://....
+        </p>
+
+        <h3>Doelgroep</h3>
+
+        <p>
+            Hier omschrijf je wie jouw kerndoelgroep is en wie je wil bereiken. Dit sluit niet
+
+            uit dat je meer mensen kan, wil en gaat bereiken, maar het is wel belangrijk
+
+            om je in eerste instantie te richten op jouw directe doelgroep. Bijvoorbeeld:
+
+            Vrouwen tussen de 20 en 40 jaar die gaan/graag willen trouwen.
+        </p>
+
+        <h3>Wat zijn de verwachtte piekmomenten.</h3>
+
+        <p>
+            Denk hier bijvoorbeeld aan een advertentie die vier weken lang in de krant
+
+            zal staan. Je kan verwachten dat er dan meer mensen naar jouw pagina zullen
+
+            komen, deze mensen zul je dan ook content moeten aanbieden.
+        </p>
+
+        <h3>Cores and paths.</h3>
+
+        <p>
+            Paden naar binnen, dit is waar de volgers vandaan komen. Bijvoorbeeld: via een
+
+            Social button op de website, likes of retweets van vrienden of de zoekfunctie van
+
+            het Social Media kanaal.
+        </p>
+
+        <p>
+            Core content, dit zegt wat voor content het is dat je plaatst. Bijvoorbeeld: Plek
+
+            voor feedback. Deze plek creëer je met bijvoorbeeld een post op Facebook waar
+
+            mensen hun mening kunnen geven over een bepaalde trouwjurk.
+        </p>
+
+        <p>
+            Paden naar buiten, dit is waar de volgers vervolgens heen kunnen. Bijvoorbeeld:
+
+            de website, een ander Social Media kanaal of het betreffende artikel waar de post
+
+            over gaat.
+        </p>
+
+        <p>
+            Call to action, dit zijn de woorden die je steeds terug zal laten komen in de
+
+            berichten. Bijvoorbeeld: Klik hier: of, Winnen? Kan hier: of, Tot zo!
+        </p>
+
+        <h3>Weekplan</h3>
+
+        <p>
+            In het weekplan bepaal je wanneer je welk soort post gaat posten. Bijvoorbeeld:
+
+            drie keer per week gaan we iets posten. In de planning zeg je welke dag, hoe
+
+            laat en om welke post het gaat. Vervolgens houd je je aan deze planning, je post
+
+            bijvoorbeeld elke maandag rond lunchtijd een ‘plek voor feedback’ post met de
+
+            trouwjurk van de week.
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/TweetenOpTwitter">&larr; Tweeten op Twitter</a></li>
+        <li class="next"><a href="~/SocialPlan/Create"><span class="glyphicon glyphicon-plus"></span> Socialplan maken!</a></li>
+    </ul>
+
+</div>
+
+<div class="col-lg-1">
+
 </div>
