--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TipsEnTricks.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TipsEnTricks.cshtml
@@ -1,21 +1,128 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
+
+<div class="col-lg-10">
+
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Posts, tweets… Tips & Tricks!</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/HulpMetSchrijven">&larr; Help! Ik ben niet zo goed in schrijven</a></li>
+        <li class="next"><a href="~/Handleiding/PostenOpFacebook">Posten op Facebook &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+        <h2>Posts, tweets… Tips & Tricks!</h2>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
+            Je hebt een Social Media account, je weet wat je ermee kan en nu denk je wellicht: ‘Ehm, en nu?’. Nu is het belangrijk dat je weet hoe je moet posten en hoe je meer interactie creëert met volgers.
         </p>
 
         <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
+            Hoe persoonlijk moet je zijn? Net zo persoonlijk als een offline zakelijk gesprek. Praat zo nu en dan over koetjes en kalfjes, geef mensen inzicht over wat jou (je bedrijf) bezig houdt en meemaakt. Zonder te persoonlijk te worden, niemand hoeft te weten dat je vanmorgen geen tijd had om je tanden te poetsen. Maar je mag het wel over, voor jouw bedrijf relevante, koetjes en kalfjes hebben. Mensen doen nu eenmaal zaken met mensen waar ze een klik mee hebben.
         </p>
 
-        <h4>kopjeje</h4>
+        <h3>Laat zien dat er mensen achter de knoppen zitten</h3>
 
         <p>
-            tekst
+            Het is belangrijk om een eigen merkpersoonlijkheid op te bouwen. Gebruik een menselijke toon als je bijvoorbeeld twittert uit naam van je bedrijf. Maak het persoonlijk met een informele toon, door vragen te beantwoorden, door je mening te geven of gewoon door menselijk contact te maken.
+        </p>
+
+        <h3>Zeg het met foto's</h3>
+
+        <p>
+            Een foto zegt meer dan duizend woorden. Oftewel: je persoonlijkheid breng je beter over met een foto dan 140 tekens. Een foto van jezelf of de dagelijkse routine van je bedrijf toont een glimp achter de schermen, op die maner voelen ze zich meer verbonden met het merk. Natuurlijk moeten dit soort tweets of posts wel zinvol zijn. Als je elke dag een foto van je lunch tweet haken volgers af, zoek de juiste balans met foto’s en deel alleen dingen die zinvol zijn.
+        </p>
+
+        <h3>Gebruik namen</h3>
+
+        <p>
+            Het verstevigen van een connectie kan al door mensen gewoon bij hun naam te noemen. Als je een vraag beantwoord zeg dan bijvoorbeeld: ‘Dank je wel, Kim’, dat is al een stuk persoonlijk dan alleen ‘dank je’. Een naam gebruiken laat zien dat je de moeite neemt je een beetje te verdiepen en dat je persoonlijke aandacht belangrijk vindt.
+        </p>
+
+        <h3>Zeg het met jouw stemgeluid</h3>
+
+        <p>
+            De tone of voice die je gebruikt om je tweets of posts een eigen karakter te geven is belangrijk. Dit geeft volgers een beeld van wie jij bent. Schrijf je berichten alsof je jouw volgers direct aanspreekt, niet alsof je ze typt. Tip: zeg eens hardop wat je wil zeggen en schrijf dat op.
+        </p>
+
+        <h3>Dialoog</h3>
+
+        <p>
+            Ga gesprekken aan door vragen te stellen. Open vragen die beginnen met wie, wat, waar of wanneer zijn het meest effectief.
+        </p>
+
+        <h3>Call to action</h3>
+
+        <p>
+            Zet een call to action in je tweets en posts, vraag je fans indirect om een ‘retweet’, ‘comment’, ‘like’ of ‘share’. Zoals: ‘Klik hier!’ of ‘Meedoen!’ of ‘Dit moet je zien!’
+        </p>
+
+        <h3>Hoogtepunt en pinfunctie op Facebook</h3>
+
+        <p>
+            Gebruik op Facebook het hoogtepunt posts (sterretje) en de pinfunctie om je post beter op te laten vallen op je tijdlijn.
+        </p>
+
+        <h3>Herkenbare categorieën</h3>
+
+        <p>
+            Werk met herkenbare categorieën op een vast terugkerend moment. Fans gaan dan vooruit kijken en vaker meedoen.
+        </p>
+
+        <h3>Push minder</h3>
+
+        <p>
+            Op Facebook en Twitter is interactie belangrijk, het is geen push-kanaal waar je onbeperkt linkjes kan droppen in de hoop dat iedereen het liked.
+        </p>
+
+        <h3>Weekplanning</h3>
+
+        <p>
+            Maak een weekplanning waarin je vastlegt wat en hoe je post.
+        </p>
+
+        <h3>Tag (# of @@)</h3>
+
+        <p>
+            Wanneer het van toepassing is tag dan betrokkenen (andere bedrijven of personen die relevant zijn). Dit zorgt voor meer engagement en cross-promotie.
+        </p>
+
+        <h3>Mooi design</h3>
+
+        <p>
+            Zorg dat de afbeeldingen die je gebruikt er verzorgd uitzien en de juiste afmetingen hebben. Het is zonde als een deel van de afbeelding niet te zien is.
+        </p>
+
+        <h3>Verkorte links</h3>
+
+        <p>
+            Maak bij lange URLS gebruik van korte linkjes, zoals die van bit.ly, hiermee kan je tevens zien hoe vaak er op de link wordt geklikt.
+        </p>
+
+        <h3>Beloon fans</h3>
+
+        <p>
+            Beloon ze voor hun loyaliteit en aandacht. Geef antwoord op comments van fans en bedank ze voor input. Je hoeft niet op iedereen te reageren, maar probeer wel de interactie op gang te houden.
+        </p>
+
+        <h3>Interessante feiten</h3>
+
+        <p>
+            Speel in op behoeftes, wat waarderen zij, wat vinden zij interessant om te lezen? Schrijf bijvoorbeeld over een artikel en verwijs hiernaar in je post.
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/HulpMetSchrijven">&larr; Help! Ik ben niet zo goed in schrijven</a></li>
+        <li class="next"><a href="~/Handleiding/PostenOpFacebook">Posten op Facebook &rarr;</a></li>
+    </ul>
+</div>
+
+<div class="col-lg-1">
+
 </div>
