--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TweetenOpTwitter.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TweetenOpTwitter.cshtml
@@ -1,21 +1,58 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
-        <h2>Titel</h2>
+﻿<div class="col-lg-1">
 
-        <h3>kopje</h3>
+</div>
+
+<div class="col-lg-10">
+
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Tweeten op Twitter</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/PostenOpFacebook">&larr; Posten op Facebook</a></li>
+        <li class="next"><a href="~/Handleiding/SocialContentStrategie">Social contentstrategie &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
+
+
+        <h2>Tweeten op Twitter</h2>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a>
+            Als nog niemand je volgt, kan het twitteren je het gevoel geven dat je voor een lege zaal staat te spreken. Doe het toch! Het is belangrijk voor twitteraars om te zien wat jouw bedrijf te melden heeft.
         </p>
 
         <p>
-            <img class="thumbnail" src="~/Content/Images/fb1.png" alt="">
+            Ga de dialoog aan. Kijk wat mensen te melden hebben en reageer daarop. Retweet dingen die je interessant vindt. Reageer op mensen die op jou reageren. Bedank zo nu en dan mensen die jouw vragen beantwoorden of jou retweeten.
         </p>
 
-        <h4>kopjeje</h4>
+        <h3>Meer tweettips</h3>
 
         <p>
-            tekst
+            - Plaats belangrijke woorden vooraan <br />
+            - Maak gebruik van hashtags<br />
+            - Schrijf het kernwoord in hoofdletters<br />
+            - Let op waar je de link plaatst (meestal achteraan)Zorg dat de tweet korter is dan de 140 karakters, zodat twitteraars jouw tweet kunnen retweeten zonder in te korten. Houdt dus rekening met RT @@gebruikersnaam.<br />
+            - Zoek korte synoniemen voor lange woorden, ivm het beperkt aantal karakters <br />
+            - Gebruik bit.ly voor linkjes, hier kan je URL’s verkorten, wederom letters besparen. Daarnaast houdt bit.ly het aantal kliks op de link bij.<br />
+            - Als het kan, schrijf getallen dan niet voluit. In plaats van twee schrijf je dus 2.
+        </p>
+
+        <h3>Infographic tweeten</h3>
+
+        <p>
+            Hieronder staat een infographic van Mycleveragency die specifieke tips geeft over de opbouw van een tweet.
+        </p>
+
+        <p>
+            <img class="thumbnail" src="~/Content/Images/infographic_tweet.png" alt="">
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/PostenOpFacebook">&larr; Posten op Facebook</a></li>
+        <li class="next"><a href="~/Handleiding/SocialContentStrategie">Social contentstrategie &rarr;</a></li>
+    </ul>
 </div>
