--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TwitterZakelijkAccount.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TwitterZakelijkAccount.cshtml
@@ -1,5 +1,19 @@
-﻿<div class="row tekst-groot">
-    <div class="col-lg-10">
+﻿<div class="col-lg-1">
+
+</div>
+<div class="col-lg-10">
+    <ol class="breadcrumb">
+        <li><a href="~/Handleiding">Handleiding Index</a></li>
+        <li class="active">Twitter zakelijk account aanmaken</li>
+    </ol>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/FacebookZakelijkAccount">&larr; Facebook zakelijk account aanmaken</a></li>
+        <li class="next"><a href="~/Handleiding/InfoSocialMedia">Kort maar krachtig: wat kan je met Social Media? &rarr;</a></li>
+    </ul>
+
+    <div class="tekst-groot">
+
         <h2>Twitter zakelijk account aanmaken</h2>
 
         <p>
@@ -143,4 +157,13 @@
             <img class="thumbnail" src="~/Content/Images/twitter_instellingen.png" alt="">
         </p>
     </div>
+
+    <ul class="pager">
+        <li class="previous"><a href="~/Handleiding/FacebookZakelijkAccount">&larr; Facebook zakelijk account aanmaken</a></li>
+        <li class="next"><a href="~/Handleiding/InfoSocialMedia">Kort maar krachtig: wat kan je met Social Media? &rarr;</a></li>
+    </ul>
+</div>
+
+<div class="col-lg-1">
+
 </div>
