--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
@@ -4,17 +4,15 @@
 
 <div class="tekst-groot">
     <div class="jumbotron">
-        <h1>Welkom op MijnSocialPlan.nl</h1>
-        <p class="lead">De online plek waar ondernemers meer leren over het zakelijk inzetten van Social Media en een Social/content plan kunnen maken. Enjoy!</p>
+        <h1>&nbsp;</h1>
+        <p class="lead">&nbsp;</p>
     </div>
 
     <div class="row">
         <div class="col-lg-12">
-            <h1>Aan de slag!</h1>
+            <h1>Welkom op MijnSocialPlan.nl</h1>
             <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
+                De online plek waar ondernemers meer leren over het zakelijk inzetten van Social Media en een Social/content plan kunnen maken. Enjoy!
             </p>
         </div>
     </div>
@@ -27,8 +25,8 @@
                 Kies het kanaal*:
             </p>
             <p>
-                <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Facebook &raquo;</a>
-                <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Twitter &raquo;</a>
+                <a class="btn btn-default" href="~/Handleiding/FacebookZakelijkAccount">Facebook &raquo;</a>
+                <a class="btn btn-default" href="~/Handleiding/TwitterZakelijkAccount">Twitter &raquo;</a>
             </p>
         </div>
         <div class="col-md-6">
@@ -43,19 +41,19 @@
             <h2>Hoe werkt het?</h2>
             <p>De zakelijke Social Media accounts heb ik al, maar ik kan nog wel wat informatie gebruiken.</p>
             <p>
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Kort maar krachtig: wat kan je met Social Media?</a><br />
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Hoe werkt Facebook?</a><br />
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Hoe werkt Twitter?</a>
+                <a class="" href="~/Handleiding/InfoSocialMedia">Kort maar krachtig: wat kan je met Social Media?</a><br />
+                <a class="" href="~/Handleiding/HoeWerktFacebook">Hoe werkt Facebook?</a><br />
+                <a class="" href="~/Handleiding/HoeWerktTwitter">Hoe werkt Twitter?</a>
             </p>
         </div>
         <div class="col-md-6">
             <h2>Social content</h2>
             <p>
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Help! Ik ben niet zo goed in schrijven.</a><br />
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Posts, Tweets… Tips & Tricks!</a><br />
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Posten op Facebook</a><br />
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Tweeten op Twitter</a><br />
-                <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Social/content strategie, wat is dat?</a>
+                <a class="" href="~/Handleiding/HulpMetSchrijven">Help! Ik ben niet zo goed in schrijven</a><br />
+                <a class="" href="~/Handleiding/TipsEnTricks">Posts, Tweets… Tips & Tricks!</a><br />
+                <a class="" href="~/Handleiding/PostenOpFacebook">Posten op Facebook</a><br />
+                <a class="" href="~/Handleiding/TweetenOpTwitter">Tweeten op Twitter</a><br />
+                <a class="" href="~/Handleiding/SocialContentStrategie">Social/content strategie, wat is dat?</a>
             </p>
         </div>
     </div>
